# massage

./: .gitignore  .gitmodules  README.md  REORG_MANIFEST.md  massage
docs/literature/: massage_robot_learning_review.md
docs/patents/: patent_disclosure_final_integrated.txt  patent_disclosure_full.txt  patent_drawings_description.txt  patent_spec_sections.txt  patent_specific_embodiment.txt
robots/fairino/: COMPLIANCE_USAGE.md  FT_AGENT_API.md  FT_HOVER_SNAPSHOT_20260527.md  FT_TECHNICAL.md  FT_USAGE.md  LASTTIME_TEST_CHECKLIST.md  LASTTIME_USAGE.md  README.md  RTMPOSE-DEPLOY.md  RTMPOSE.py  demo.py  dianjing.py  fairino_compliance.site_template.env  fairino_compliance_control.py  fairino_ros2_air_move_demo.py  fairino_spring_assist.py  force_control.py  force_sensor.py  ft.py  ft_agent_api.py  ft_hover_env_20260527.txt  hover.py  lastime_ros2.py  lasttime.py  lasttime_ros2.py  massage_home_pose.json  rtmpose.py  run_demo.sh  run_fairino_compliance.sh  run_fairino_ros2_air_move_demo.sh  run_fairino_spring.sh  run_lasttime.sh  run_lasttime_ros2.sh  run_shunjin_only.py  run_thigh_offset_adjust.sh  test_force_sensor.py  thigh_offset_adjust.py  thigh_outerline_confirm.py  third_party  yolo.py
robots/fairino/fairino/: __init__.py
robots/fairino/fairino_ros2/frcobot_ros2-master/: API说明.md  README.md
robots/fairino/fairino_ros2/frcobot_ros2-master/fairino_hardware/: CMakeLists.txt
robots/fairino/fairino_ros2/frcobot_ros2-master/fairino_hardware/include/fairino_hardware/: command_server.hpp  version_control.h
robots/fairino/fairino_ros2/frcobot_ros2-master/fairino_hardware/libfairino/lib/: libfairino.so.2
robots/fairino/fairino_ros2/frcobot_ros2-master/fairino_hardware/src/: command_server.cpp
robots/fairino/fairino_ros2/frcobot_ros2-master/install/: local_setup.sh  setup.sh
robots/realman/: README.md  build_bladder_depth_normal_diagnostic.py  build_depth_normal_bladder_plan.py  build_external_bladder_plan.py  calibrate_rm_camera_to_base_aruco.py  camera_to_robot.json  connect_jetson.sh  disconnect_jetson.sh  probe_side_lying_force.py  retarget_saved_bladder_plan.py  rm_air_move_demo.py  rm_docker_camera_view.py  rm_draw_heart_demo.py  rm_local_forward.py  rm_prepare_heart_pose.py  rm_product_bladder_demo.py  rm_product_bladder_demo_local.py  rm_web_proxy.py  run_bladder_preview_current.sh  run_bladder_split.py  run_depth_normal_bladder_live_hover.py  run_external_bladder_live_hover.py  run_live_top_outer_point_force.py  run_purple_20_point_press.py  run_saved_bladder_plan.py  run_side_lying_bladder.py  run_side_lying_flange_normal_hover.sh  run_side_lying_force_json.sh  run_side_lying_force_path.py  run_side_lying_hover.sh  run_teach_normal_probe.py  unlock_robot.py  view_bladder_detection_docker_ros.py  view_bladder_detection_live.py  view_bladder_detection_rosbridge.py
robots/realman/massage_ws/src/rm_massage/: README.md  package.xml  setup.cfg  setup.py
robots/realman/massage_ws/src/rm_massage/config/: body_markers.yaml  frames.yaml  frames_json.yaml  massage_lines.yaml  massage_lines_base_test.yaml  safety.yaml
robots/realman/massage_ws/src/rm_massage/launch/: massage_bringup.launch.py
robots/realman/massage_ws/src/rm_massage/rm_massage/: __init__.py  aruco_body_pose.py  calibrate_base_camera.py  check_force_axis.py  clear_force_json.py  config_io.py  (+8 more)
robots/realman/rm_demo/: PRODUCT_FUNCTIONS_OVERVIEW.md  README.md  __init__.py  config.py  rm_aruco_tf_broadcaster.py  rm_bladder.py  rm_bladder_demo.py  rm_bladder_live_preview.py  rm_capture.py  rm_detect.py  rm_execute.py  rm_json.py  rm_link_tf.rviz  rm_link_tf_broadcaster.py  rm_plan.py  rm_positioning.py  rm_product_executor.py  rm_product_ros.py  rm_product_trajectory.py  rm_remote_sdk.py  rm_rgbd_pointcloud_world.py  rm_ros.py  rm_ros_slave_launch.sh  rm_side_lying.py  rm_side_lying_debug_markers.py  rm_speed.py  rm_static_demo.py  rm_temperature.py  rm_transform.py  run_bladder_on_board.sh
robots/realman/ros_vendor/: trajectory_generate.yaml
shared/calibration/: calibrate_camera_to_robot_aruco.py  camera_robot_aruco_pairs.json  camera_to_robot.json  camera_to_robot_aruco_report.json  verify_calibration.py
shared/camera/: collect_data.py  record_realsense_rosbag.sh  replay_latest_rosbag.sh  rosbag_rgbd_viewer.py  start_realsense_and_record.sh  view_opencv_camera.py  view_realsense_live.py  view_remote_camera_over_ssh.py
shared/misc/: download_artvip.py
shared/tools/nomachine_pkgs/: install_nomachine_board.sh  install_nomachine_local.sh
shared/vision/: main.py  yolo.py
(+603 files in other folders)
